add script to include client folders

--- a/.devcontainer/dotnet/devcontainer.json
+++ b/.devcontainer/dotnet/devcontainer.json
@@ -44,7 +44,7 @@
         },
         "codespaces": {
             "openFiles": [
-                "README.md"
+                "server/dotnet/README.md"
             ]
         }
     },
