--- a/.devcontainer/python/devcontainer.json
+++ b/.devcontainer/python/devcontainer.json
@@ -40,7 +40,7 @@
         },
         "codespaces": {
             "openFiles": [
-                "README.md"
+                "server/python/README.md"
             ]
         }
     },
