--- a/.devcontainer/node/devcontainer.json
+++ b/.devcontainer/node/devcontainer.json
@@ -39,7 +39,7 @@
         },
         "codespaces": {
             "openFiles": [
-                "README.md"
+                "server/node/README.md"
             ]
         }
     },
