--- a/.devcontainer/php/devcontainer.json
+++ b/.devcontainer/php/devcontainer.json
@@ -40,7 +40,7 @@
         },
         "codespaces": {
             "openFiles": [
-                "README.md"
+                "server/php/README.md"
             ]
         }
     },
