--- a/.devcontainer/ruby/devcontainer.json
+++ b/.devcontainer/ruby/devcontainer.json
@@ -40,7 +40,7 @@
         },
         "codespaces": {
             "openFiles": [
-                "README.md"
+                "server/ruby/README.md"
             ]
         }
     },
