--- a/.devcontainer/html_java/devcontainer.json
+++ b/.devcontainer/html_java/devcontainer.json
@@ -1,13 +1,13 @@
 {
-    "name": "Python",
-    "image": "mcr.microsoft.com/devcontainers/python:3.10",
+    "name": "HTML + Java",
+    "image": "mcr.microsoft.com/devcontainers/java:17",
     "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
     "forwardPorts": [
-        8888
+        8080
     ],
     "portsAttributes": {
-        "8888": {
-            "label": "Python",
+        "8080": {
+            "label": "Java",
             "onAutoForward": "openBrowserOnce"
         }
     },
@@ -24,26 +24,32 @@
     "containerEnv": {
         "PAYPAL_API_BASE_URL": "https://api-m.sandbox.paypal.com",
         "DOMAINS": "paypal.com",
-        "VISIBLE_FOLDER_SERVER": "python"
+        "VISIBLE_FOLDER_SERVER": "java",
+        "VISIBLE_FOLDER_CLIENT": "html"
     },
     "customizations": {
         "vscode": {
             "extensions": [
                 "vsls-contrib.codetour",
                 "PayPal.vscode-paypal",
-                "ms-python.python"
+                "vscjava.vscode-java-pack"
             ]
         },
         "settings": {
-            "git.openRepositoryInParentFolders": "always",
-            "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python"
+            "git.openRepositoryInParentFolders": "always"
         },
         "codespaces": {
             "openFiles": [
-                "server/python/README.md"
+                "README.md"
             ]
         }
     },
-    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd server/python && python -m venv .venv && . .venv/bin/activate && pip install --upgrade pip && pip install -r requirements.txt",
-    "postAttachCommand": "cd server/python && . .venv/bin/activate && python app.py"
+    "features": {
+        "ghcr.io/devcontainers/features/java:1": {
+            "version": "17",
+            "installMaven": "true"
+        }
+    },
+    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd /workspaces/${localWorkspaceFolderBasename}/server && touch java/.env && cd java && mvn clean install",
+    "postAttachCommand": "cd server/java && mvn spring-boot:run"
 }
