--- a/.devcontainer/vue_dotnet/devcontainer.json
+++ b/.devcontainer/vue_dotnet/devcontainer.json
@@ -4,7 +4,8 @@
     "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
     "forwardPorts": [
         5000,
-        5001
+        5001,
+        5173
     ],
     "portsAttributes": {
         "5000": {
@@ -13,6 +14,10 @@
         },
         "5001": {
             "label": "Dotnet HTTPS",
+            "onAutoForward": "openBrowserOnce"
+        },
+        "5173": {
+            "label": "Vue",
             "onAutoForward": "openBrowserOnce"
         }
     },
@@ -37,7 +42,9 @@
             "extensions": [
                 "vsls-contrib.codetour",
                 "PayPal.vscode-paypal",
-                "ms-dotnettools.csharp"
+                "ms-dotnettools.csharp",
+                "Vue.volar",
+                "Vue.vscode-typescript-vue-plugin"
             ]
         },
         "settings": {
@@ -49,6 +56,11 @@
             ]
         }
     },
-    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd server/dotnet && dotnet restore",
-    "postAttachCommand": "cd server/dotnet && dotnet run"
+    "features": {
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": "lts"
+        }
+    },
+    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd server/dotnet && dotnet restore && cd /workspaces/${localWorkspaceFolderBasename}/client/vue && npm install",
+    "postAttachCommand": "cd server/dotnet && dotnet run & cd /workspaces/${localWorkspaceFolderBasename}/client/vue && npm run dev"
 }
