--- a/.devcontainer/angular_java/devcontainer.json
+++ b/.devcontainer/angular_java/devcontainer.json
@@ -3,11 +3,16 @@
     "image": "mcr.microsoft.com/devcontainers/java:17",
     "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
     "forwardPorts": [
-        8080
+        8080,
+        4200
     ],
     "portsAttributes": {
         "8080": {
             "label": "Java",
+            "onAutoForward": "openBrowserOnce"
+        },
+        "4200": {
+            "label": "Angular",
             "onAutoForward": "openBrowserOnce"
         }
     },
@@ -32,7 +37,8 @@
             "extensions": [
                 "vsls-contrib.codetour",
                 "PayPal.vscode-paypal",
-                "vscjava.vscode-java-pack"
+                "vscjava.vscode-java-pack",
+                "angular.ng-template"
             ]
         },
         "settings": {
@@ -48,8 +54,11 @@
         "ghcr.io/devcontainers/features/java:1": {
             "version": "17",
             "installMaven": "true"
+        },
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": "lts"
         }
     },
-    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd /workspaces/${localWorkspaceFolderBasename}/server && touch java/.env && cd java && mvn clean install",
-    "postAttachCommand": "cd server/java && mvn spring-boot:run"
+    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd /workspaces/${localWorkspaceFolderBasename}/server && touch java/.env && cd java && mvn clean install && cd /workspaces/${localWorkspaceFolderBasename}/client/angular && npm install",
+    "postAttachCommand": "cd /workspaces/${localWorkspaceFolderBasename}/server/java && mvn spring-boot:run & cd /workspaces/${localWorkspaceFolderBasename}/client/angular && npm start --no-analytics"
 }
