--- a/.devcontainer/angular_node/devcontainer.json
+++ b/.devcontainer/angular_node/devcontainer.json
@@ -3,11 +3,16 @@
     "image": "mcr.microsoft.com/devcontainers/javascript-node:20",
     "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
     "forwardPorts": [
-        3000
+        3000,
+        4200
     ],
     "portsAttributes": {
         "3000": {
             "label": "Node",
+            "onAutoForward": "openBrowserOnce"
+        },
+        "4200": {
+            "label": "Angular",
             "onAutoForward": "openBrowserOnce"
         }
     },
@@ -44,6 +49,11 @@
             ]
         }
     },
-    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd server/node && npm install",
-    "postAttachCommand": "cd server/node && npm start"
+    "features": {
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": "lts"
+        }
+    },
+    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd server/node && npm install && cd /workspaces/${localWorkspaceFolderBasename}/client/angular && npm install",
+    "postAttachCommand": "cd server/node && npm start & cd /workspaces/${localWorkspaceFolderBasename}/client/angular && npm start --no-analytics"
 }
