--- a/.devcontainer/vue_ruby/devcontainer.json
+++ b/.devcontainer/vue_ruby/devcontainer.json
@@ -3,11 +3,16 @@
     "image": "mcr.microsoft.com/devcontainers/ruby:2.7",
     "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
     "forwardPorts": [
-        4567
+        4567,
+        5173
     ],
     "portsAttributes": {
         "4567": {
             "label": "Ruby",
+            "onAutoForward": "openBrowserOnce"
+        },
+        "5173": {
+            "label": "Vue",
             "onAutoForward": "openBrowserOnce"
         }
     },
@@ -33,7 +38,9 @@
             "extensions": [
                 "vsls-contrib.codetour",
                 "PayPal.vscode-paypal",
-                "rebornix.Ruby"
+                "rebornix.Ruby",
+                "Vue.volar",
+                "Vue.vscode-typescript-vue-plugin"
             ]
         },
         "settings": {
@@ -45,6 +52,11 @@
             ]
         }
     },
-    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd server/ruby && gem install bundler:1.17.2 && bundle _1.17.2_ install --path vendor/bundle",
-    "postAttachCommand": "cd server/ruby && bundle exec ruby src/server.rb"
+    "features": {
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": "lts"
+        }
+    },
+    "postCreateCommand": "chmod +x .devcontainer/update_settings.sh && .devcontainer/update_settings.sh && cd server/ruby && gem install bundler:1.17.2 && bundle _1.17.2_ install --path vendor/bundle && cd /workspaces/${localWorkspaceFolderBasename}/client/vue && npm install",
+    "postAttachCommand": "cd server/ruby && bundle exec ruby src/server.rb & cd /workspaces/${localWorkspaceFolderBasename}/client/vue && npm run dev"
 }
